--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,14 @@
     <string name="settings_root_title">Settings</string>
     <string name="settings_screen_lock_key">screenLock</string>
     <string name="settings_screen_lock_content_description">lock screen</string>
+    <string name="settings_theme_mode_auto_label">Auto (changes with sunrise and sunset)</string>
+    <string name="settings_theme_mode_auto_value">auto</string>
+    <string name="settings_theme_mode_day_label">Day</string>
+    <string name="settings_theme_mode_day_value">day</string>
+    <string name="settings_theme_mode_key">themeMode</string>
+    <string name="settings_theme_mode_title">Theme</string>
+    <string name="settings_theme_mode_night_label">Night</string>
+    <string name="settings_theme_mode_night_value">night</string>
     <string name="settings_units_dialog_title">Units of Measurement</string>
     <string name="settings_units_imperial_label">Imperial</string>
     <string name="settings_units_imperial_value">imperial</string>
