--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,9 @@
     <string name="settings_compass_mode_true_value">trueNorth</string>
     <string name="settings_coordinates_format_key">coordsFormat</string>
     <string name="settings_filename">Positional</string>
+    <string name="settings_privacy_policy_key">privacyPolicy</string>
+    <string name="settings_privacy_policy_summary">Learn more about how Positional respects your privacy and uses your data</string>
+    <string name="settings_privacy_policy_title">Privacy policy</string>
     <string name="settings_root_title">Settings</string>
     <string name="settings_screen_lock_key">screenLock</string>
     <string name="settings_screen_lock_content_description">lock screen</string>
@@ -91,12 +94,12 @@
     <string name="settings_theme_mode_title">Theme</string>
     <string name="settings_theme_mode_night_label">Night</string>
     <string name="settings_theme_mode_night_value">night</string>
-    <string name="settings_units_dialog_title">Units of Measurement</string>
+    <string name="settings_units_dialog_title">Units of measurement</string>
     <string name="settings_units_imperial_label">Imperial</string>
     <string name="settings_units_imperial_value">imperial</string>
     <string name="settings_units_key">useMetricUnits</string>
     <string name="settings_units_metric_label">Metric</string>
     <string name="settings_units_metric_value">metric</string>
-    <string name="settings_units_title">Units of Measurement</string>
+    <string name="settings_units_title">Units of measurement</string>
 
 </resources>
