Switch from day/night themes to proper light/dark mode support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,15 +121,15 @@
     <string name="settings_root_title">Settings</string>
     <string name="settings_screen_lock_key">screenLock</string>
     <string name="settings_screen_lock_content_description">lock screen</string>
-    <string name="settings_theme_mode_auto_label">Auto (changes with sunrise and sunset)</string>
-    <string name="settings_theme_mode_auto_value">auto</string>
-    <string name="settings_theme_mode_day_label">Day</string>
-    <string name="settings_theme_mode_day_value">day</string>
-    <string name="settings_theme_mode_dialog_title">@string/settings_theme_mode_title</string>
-    <string name="settings_theme_mode_key">themeMode</string>
-    <string name="settings_theme_mode_title">Theme</string>
-    <string name="settings_theme_mode_night_label">Night</string>
-    <string name="settings_theme_mode_night_value">night</string>
+    <string name="settings_theme_system_label">System</string>
+    <string name="settings_theme_system_value">system</string>
+    <string name="settings_theme_light_label">Light</string>
+    <string name="settings_theme_light_value">light</string>
+    <string name="settings_theme_dialog_title">@string/settings_theme_title</string>
+    <string name="settings_theme_key">theme</string>
+    <string name="settings_theme_title">Theme</string>
+    <string name="settings_theme_dark_label">Dark</string>
+    <string name="settings_theme_dark_value">dark</string>
     <string name="settings_units_dialog_title">Units of measurement</string>
     <string name="settings_units_imperial_label">Imperial</string>
     <string name="settings_units_imperial_value">imperial</string>
