Refactor to a single coordinates text view instead of fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,13 +42,8 @@
     <string name="location_accuracy_imperial">%d ft</string>
     <string name="location_accuracy_metric">%d m</string>
     <string name="location_bearing">%d°</string>
-    <string name="location_coordinate_decimal">% 10.5f</string>
+    <string name="location_coordinate_decimal">%.5f</string>
     <string name="location_coordinate_utm">%7.0f</string>
-    <string name="location_coordinate_format_label_decimal_degrees">Decimal Degrees</string>
-    <string name="location_coordinate_format_label_degrees_decimal_minutes">Degrees, Decimal Minutes</string>
-    <string name="location_coordinate_format_label_degrees_minutes_seconds">Degrees, Minutes, Seconds</string>
-    <string name="location_coordinate_format_label_mgrs">MGRS</string>
-    <string name="location_coordinate_format_label_utm">UTM</string>
     <string name="location_copied_coordinates_label">Location</string>
     <string name="location_copied_coordinates_failure">Hold tight, still trying to get your location…</string>
     <string name="location_copied_coordinates_both_success">Latitude and longitude copied</string>
@@ -69,8 +64,6 @@
     <string name="location_permission_explanation_message">Positional needs your permission to access this device\'s location, but you previously denied it. You will need to grant it through the Settings app before using this app.</string>
     <string name="location_permission_explanation_positive">Go to Settings</string>
     <string name="location_permission_explanation_negative">@string/exit</string>
-    <string name="location_screen_lock_snackbar_off">Screen lock disabled</string>
-    <string name="location_screen_lock_snackbar_on">Screen lock enabled</string>
     <string name="location_share_button_content_description">share coordinates</string>
     <string name="location_share_snackbar_failure">Hold tight, still trying to get your coordinates…</string>
     <string name="location_speed_imperial">%.0f mph</string>
@@ -113,8 +106,20 @@
     <string name="settings_compass_mode_title">Compass mode</string>
     <string name="settings_compass_mode_true_label">True North</string>
     <string name="settings_compass_mode_true_value">trueNorth</string>
-    <string name="settings_coordinates_format_key">coordsFormat</string>
     <string name="settings_filename">Positional</string>
+    <string name="settings_coordinates_format_dialog_title">Location Format</string>
+    <string name="settings_coordinates_format_key">coordsFormat</string>
+    <string name="settings_coordinates_format_title">Coordinates format</string>
+    <string name="settings_coordinates_format_dd_label">Decimal degrees</string>
+    <string name="settings_coordinates_format_dd_value">dd</string>
+    <string name="settings_coordinates_format_ddm_label">Degrees, decimal minutes</string>
+    <string name="settings_coordinates_format_ddm_value">ddm</string>
+    <string name="settings_coordinates_format_dms_label">Degrees, minutes, seconds</string>
+    <string name="settings_coordinates_format_dms_value">dms</string>
+    <string name="settings_coordinates_format_mgrs_label">MGRS</string>
+    <string name="settings_coordinates_format_mgrs_value">mgrs</string>
+    <string name="settings_coordinates_format_utm_label">UTM</string>
+    <string name="settings_coordinates_format_utm_value">utm</string>
     <string name="settings_privacy_policy_key">privacyPolicy</string>
     <string name="settings_privacy_policy_summary">Learn more about how Positional respects your privacy and uses your data</string>
     <string name="settings_privacy_policy_title">Privacy policy</string>
